<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LockScreen</string>
    <string name="action_lic">License</string>
    <string name="action_reload">Reload</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="about_app">About App</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Save image to google disk</string>
    <string name="pref_description_social_recommendations"></string>
    <string name="pref_title_image_from_inet">Image from inet</string>
    <string name="pref_description_image_from_inet"></string>
    <string name="flag_wall_summary"></string>
    <string name="flag_wall_Title">LOCK or SYSTEM</string>
    <string name="save_log_Title">Save log</string>
    <string name="home_Title">Home pictures</string>
    <string name="action_logs">Logs</string>
    <string name="action_restart_service">Restart Service</string>
    <string name="send_to">Send to</string>


    <string name="pref_title_update_start">Start update</string>
    <string name="pref_title_alpha_value">Alpha value</string>
    <string name="pref_default_update_start">0</string>
    <string name="pref_default_alpha_value">150</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_update_frequency">Update frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>3 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>3</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_source">Source load</string>
    <string-array name="pref_source_titles">
        <item>Local</item>
        <item>Inet</item>
        <item>Google Drive</item>
    </string-array>
    <string-array name="pref_source_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- License Error Code -->
    <string name="err_internal">Internal error</string>
    <string name="err_internal_server">Internal server error</string>
    <string name="err_licence_invalid_license">Invalid license</string>
    <string name="err_invalid_package_name">Invalid package name</string>
    <string name="err_licence_terminated">License terminated</string>
    <string name="err_network_disconnected">Network disconnected</string>
    <string name="err_network_general">Network general error</string>
    <string name="err_unknown">Error unknown</string>
    <string name="err_not_current_date">Not current date</string>
    <string name="err_null_params">NULL params</string>
    <string name="err_user_disagrees_license_agreement">User disagrees EULA</string>

    <string name="not_supported_sdk">This device does not support ELM activation API and hence this app will not work on it</string>
    <string name="ok">OK</string>
    <!-- Admin and License activation constants -->
    <string name="device_admin_heading">Device Administration</string>
    <string name="enable_admin">Enable Admin</string>
    <string name="disable_admin">Disable Admin</string>
    <string name="device_admin_enabled">Device admin enabled</string>
    <string name="device_admin_disabled">Device admin disabled</string>
    <string name="license_activation">License Activation</string>
    <string name="activate_elm">Activate ELM</string>
    <string name="disable_admin_confirmation">Do you want to disable device administrator?</string>
    <string name="elm_activated_successfully">ELM activated successfully</string>
    <string name="insert_elm_key">Please insert ELM key in the code in variable SAConstants.ELM_KEY</string>
    <string name="insert_elm_key_heading">Insert ELM key</string>
    <!-- Exception Messages -->
    <string name="admin_activity_not_found">"ActivityNotFoundException: Device admin addition activity is not found"</string>
    <string name="non_owner_admin_removal_exception">"SecurityException: This app attempts to remove an active admin not owned by it"</string>
    <string name="security_exception">SecurityException: The caller does not have required permission</string>

    <string name="title_activity_fullscreen">View Wallpaper</string>
    <string name="pref_title_timeout">Time Out Соединения (сек)</string>

</resources>