<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="save_google_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />
    <!--SwitchPreference
        android:defaultValue="false"
        android:key="image_from_inet"
        android:summary="@string/pref_description_image_from_inet"
        android:title="@string/pref_title_image_from_inet" /-->

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_source_titles"
        android:entryValues="@array/pref_source_values"
        android:key="source_load"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_source" />

    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="update_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_update_frequency" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_update_start"
        android:inputType="numberSigned"
        android:key="update_start"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_update_start" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="flag_wall"
        android:summary="@string/flag_wall_summary"
        android:title="@string/flag_wall_Title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="save_log"
        android:summary=""
        android:title="@string/save_log_Title" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /-->

</PreferenceScreen>
